--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,12 @@ body {
 
 .block-black:hover{
   background: #056676;
-  color: #204051;
+  color: #e7dfd5;
   font-size: 70px
 }
 
 .block-white:hover{
   background: #056676;
-  color: #204051;
+  color: #e7dfd5;
   font-size: 70px
 }
